重构类结构

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,18 @@
             </dependency>
 
             <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>discovery-contrib-database-starter-shardingsphere</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>discovery-contrib-mq-starter-rocketmq</artifactId>
+                <version>${project.version}</version>
+            </dependency>            
+
+            <dependency>
                 <groupId>com.nepxion</groupId>
                 <artifactId>discovery</artifactId>
                 <version>${discovery.version}</version>
