--- a/discovery-contrib-mq/discovery-contrib-mq-starter-rocketmq/pom.xml
+++ b/discovery-contrib-mq/discovery-contrib-mq-starter-rocketmq/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>discovery-contrib-common</artifactId>
+            <artifactId>discovery-contrib-core</artifactId>
         </dependency>
 
         <dependency>
