--- a/discovery-contrib-example/pom.xml
+++ b/discovery-contrib-example/pom.xml
@@ -33,11 +33,13 @@
         <dependency>
             <groupId>com.nepxion</groupId>
             <artifactId>discovery-contrib-starter-shardingsphere</artifactId>
+            <version>${project.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.nepxion</groupId>
             <artifactId>discovery-contrib-starter-rocketmq</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
