--- a/discovery-contrib-starter/discovery-contrib-starter-rocketmq/pom.xml
+++ b/discovery-contrib-starter/discovery-contrib-starter-rocketmq/pom.xml
@@ -18,6 +18,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>discovery-contrib-core</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
