--- a/discovery-contrib-starter/pom.xml
+++ b/discovery-contrib-starter/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <artifactId>discovery-contrib-starters</artifactId>
-    <name>Nepxion Discovery Contrib Starters</name>
+    <artifactId>discovery-contrib-starter</artifactId>
+    <name>Nepxion Discovery Contrib Starter</name>
     <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
     <description>Nepxion Discovery Contrib is 3rd-party contributions that use Nepxion Discovery</description>
