--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,14 @@
     <url>http://www.nepxion.com</url>
 
     <modules>
-        <module>discovery-contrib-core</module>
-        <module>discovery-contrib-starter</module>
+        <module>discovery-contrib-plugin</module>
         <module>discovery-contrib-example</module>
     </modules>
 
     <properties>
         <discovery.version>6.2.0</discovery.version>
+
+        <rocketmq.version>2.1.1</rocketmq.version>
 
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,6 +26,30 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>discovery-contrib-plugin-starter</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>discovery-contrib-plugin-starter-rocketmq</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>discovery-contrib-plugin-starter-shardingsphere</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>${rocketmq.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.nepxion</groupId>
                 <artifactId>discovery</artifactId>
