--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     </modules>
 
     <properties>
-        <discovery.version>6.2.0</discovery.version>
+        <discovery.version>6.3.0-SNAPSHOT</discovery.version>
 
         <rocketmq.version>2.1.1</rocketmq.version>
 
