--- a/discovery-contrib-example/pom.xml
+++ b/discovery-contrib-example/pom.xml
@@ -15,16 +15,25 @@
     </parent>
 
     <dependencies>
+        <!-- 1.注册中心插件 -->
         <dependency>
             <groupId>com.nepxion</groupId>
             <artifactId>discovery-plugin-register-center-starter-nacos</artifactId>
         </dependency>
 
+        <!-- 2.配置中心插件 -->
         <dependency>
             <groupId>com.nepxion</groupId>
             <artifactId>discovery-plugin-config-center-starter-nacos</artifactId>
         </dependency>
 
+        <!-- 3.管理中心插件 -->
+        <dependency>
+            <groupId>com.nepxion</groupId>
+            <artifactId>discovery-plugin-admin-center-starter</artifactId>
+        </dependency>
+
+        <!-- 4.服务的策略编排插件 -->
         <dependency>
             <groupId>com.nepxion</groupId>
             <artifactId>discovery-plugin-strategy-starter-service</artifactId>
